WIP returnUrl, payments/details

--- a/force-app/main/default/classes/AdyenReturnUrl.cls
+++ b/force-app/main/default/classes/AdyenReturnUrl.cls
@@ -2,18 +2,24 @@
 global with sharing class AdyenReturnUrl {
 
     @HttpGet
-    global static void pageReferenceMethod()
+    global static void returnUrl()
     {
+//        System.Debug('## ReturnURL');
+////        return new PageReference('/001');
+////        return 'Test';
+//        PageReference pr = new PageReference('https://www.google.com');
+//        pr.setRedirect(true);
         System.Debug('## ReturnURL');
-//        return new PageReference('/001');
-//        return 'Test';
-        PageReference pr = new PageReference('https://www.google.com');
-        pr.setRedirect(true);
+        PageReference pr = new PageReference('/apex/AdyenReturnUrl');
         System.Debug('## ReturnURL = ' + pr);
+        pr.setRedirect(true); // If you want a redirect. Do not set anything if you want a forward.
+        RestContext.response.responseBody = pr.getContent();
+        RestContext.response.headers.put('Content-Type', 'text/html');
+        RestContext.response.headers.put('Content-Length', RestContext.response.responseBody.size() + '');
     }
 
     public PageReference renderPage(){
-        PageReference pr = new PageReference('/apex/yourVFPageName');
+        PageReference pr = new PageReference('/apex/AdyenReturnUrl');
 //        pr.getParameters().put('key','value');
         pr.setRedirect(true); // If you want a redirect. Do not set anything if you want a forward.
         return pr;
