Added Adyen merchant config

--- a/force-app/main/default/classes/AdyenOrder.cls
+++ b/force-app/main/default/classes/AdyenOrder.cls
@@ -1,5 +1,5 @@
-public with sharing class AdyenOrder {
-    public static Map<String, Object> createOrder(Map<String, Object> processResult, ccrz__E_Cart__c cart) {
+global with sharing class AdyenOrder {
+    public static Map<String, Object> createOpenOrder(Map<String, Object> processResult, ccrz__E_Cart__c cart) {
             Map<String, Object> createOrderParams = new Map<String, Object>{
                     ccrz.ccApi.API_VERSION => 9,
                     ccrz.ccApiCart.TRANSPAYMENTDATA =>
@@ -14,9 +14,48 @@ public with sharing class AdyenOrder {
 
             //Converts a cart to a corresponding order.
             Map<String, Object> placeResult = ccrz.ccApiCart.place(createOrderParams);
-            System.Debug('#### order created ' + placeResult);
             return placeResult;
     }
 
+     public static Map<String, String> validateOrderResult(Map<String, Object> placeResult) {
+        String orderId = (String) placeResult.get('orderId');
+        ccrz__E_Order__c[] placedOrder = getOrderById(orderId);
+        Map<String, String> orderResult = new Map<String, String>();
+        if (placedOrder <> null && placedOrder.size() == 1) {
+            orderResult.put('orderId', orderId);
+            orderResult.put('orderIdEnc', placedOrder[0].ccrz__EncryptedId__c);
+            orderResult.put('cartId', placedOrder[0].ccrz__OriginatedCart__c);
+        }
+
+        return orderResult;
+    }
+
+     public static String updateOrderStatus(String cartId){
+        ccrz__E_Order__c[] authOrder = AdyenOrder.getOrderByCartId(cartId);
+        if(authOrder <> null && authOrder.size() == 1) {
+            //TODOBAS update Order Status authOrder[0]
+            return authOrder[0].ccrz__EncryptedId__c;
+        }
+
+        return 'testOrderUpdate';
+    }
+
+    public static ccrz__E_Order__c[] getOrderById(String orderId){
+        return  [
+                SELECT Id, ccrz__EncryptedId__c, ccrz__OriginatedCart__c
+                FROM ccrz__E_Order__c
+                WHERE Id = :orderId
+                LIMIT 1
+        ];
+    }
+
+    public static ccrz__E_Order__c[] getOrderByCartId(String cartId){
+        return  [
+                SELECT Id, ccrz__EncryptedId__c, ccrz__OriginatedCart__c
+                FROM ccrz__E_Order__c
+                WHERE ccrz__OriginatedCart__c = :cartId
+                LIMIT 1
+        ];
+    }
 
 }
