--- a/force-app/main/default/classes/AdyenPaymentMethodsRequest.cls
+++ b/force-app/main/default/classes/AdyenPaymentMethodsRequest.cls
@@ -1,7 +1,7 @@
 public with sharing class AdyenPaymentMethodsRequest {
     public static PaymentMethodsRequest createPaymentMethodsRequest(ccrz__E_Cart__c cart, Merchant__mdt merchant) {
         PaymentMethodsRequest paymentMethodsRequest = new PaymentMethodsRequest();
-        paymentMethodsRequest.merchantAccount = merchant.Name__c;
+        paymentMethodsRequest.merchantAccount = merchant.Merchant_Account__c;
         paymentMethodsRequest.amount = AdyenUtil.getAdyenAmount(cart.ccrz__CurrencyISOCode__c, cart.ccrz__TotalAmount__c);
         paymentMethodsRequest.shopperReference = cart.ccrz__Account__c;
 
