--- a/force-app/main/default/classes/AdyenService.cls
+++ b/force-app/main/default/classes/AdyenService.cls
@@ -2,33 +2,28 @@
 global with sharing class AdyenService {
     @HttpPost
     global static String adyenPaymentsDetails(){
-        //TODOBAS Retrieve OrderId
         String requestBody = RestContext.request.requestBody.toString();
         Map<String, Object> requestData = (Map<String, Object>)JSON.deserializeUntyped(requestBody);
-        System.debug('### requestData = ' + requestData);
-        String currentCartId = (String)requestData.get('cartId');
 
         PaymentsDetailsRequest paymentsDetailsRequest = (PaymentsDetailsRequest) JSON.deserialize(requestBody, PaymentsDetailsRequest.class);
-
-        System.debug('### paymentsDetailsRequest req = ' + paymentsDetailsRequest);
         PaymentsResponse paymentsResponse = AdyenPaymentsDetailsRequest.callPaymentsDetails(paymentsDetailsRequest);
-        System.debug('### paymentsResponse = ' + paymentsResponse);
         Map<String, Object> paymentResult = AdyenResponseHandler.handleResponse(paymentsResponse);
 
-        //TODOBAS check if merchantReference from paymentsResponse is same as OrderId
-        if (String.valueOf(paymentResult.get('resultCode')) == 'AUTHORISED') {
-            System.debug('### payment Authorised and start updating Order Status');
-            //TODOBAS update Order Status to Order Submitted
-
+        if(!(Boolean)paymentResult.get('isFinal')){
+            return JSON.serialize(paymentResult, true);
         }
-        System.debug('### paymentResult = ' + paymentResult);
-        return JSON.serialize(paymentResult, true);
-//        PaymentsDetailsRequest paymentsDetailsRequest = AdyenPaymentsDetailsRequest.createPaymentsDetailsRequest(stateData);
-//        System.debug('### paymentsDetailsRequest = ' + paymentsDetailsRequest);
-//        PaymentsResponse paymentsResponse = AdyenPaymentsDetailsRequest.callPaymentsDetails(paymentsDetailsRequest);
-//        System.debug('### paymentsResponse = ' + paymentsResponse);
-//        return JSON.serialize(paymentsResponse, true);
 
-//        return 'AdyenService Success';
+        String cartId = (String)requestData.get('cartId');
+        if(!(paymentsResponse.merchantReference == cartId)){
+            //TODOBAS restore cart
+            return 'Invalid order';
+        }
+
+        if (String.valueOf(paymentResult.get('resultCode')) == 'AUTHORISED') {
+            return AdyenOrder.updateOrderStatus(cartId);
+        }
+
+        return JSON.serialize(paymentResult, true);
+
     }
 }
