--- a/force-app/main/default/classes/AdyenUtil.cls
+++ b/force-app/main/default/classes/AdyenUtil.cls
@@ -2,7 +2,8 @@ public with sharing class AdyenUtil {
     public static Merchant__mdt getConfiguredMerchantAccount(ccrz__E_Cart__c cart) {
         Map<String, Object> mapAdyenParams = Util.getCCConfig('pmt_adyencc', cart.ccrz__Storefront__c, true, true);
         Map<String, String> mapConfigs = (Map<String, String>) mapAdyenParams.get(ccrz.ccAPIConfig.CONFIGURATIONS);
-        return Util.getConfigByName(mapConfigs.get('pmt_adyencc.config'));
+        //TODOBAS refactor
+        return Util.getConfigByName('AdyenMerchantConfig');
     }
 
     public static String getConfiguredCaptureDelay(ccrz__E_Cart__c cart) {
