--- a/force-app/main/default/classes/AdyenPaymentRequest.cls
+++ b/force-app/main/default/classes/AdyenPaymentRequest.cls
@@ -5,7 +5,9 @@ public with sharing class AdyenPaymentRequest {
         paymentRequest.amount = AdyenUtil.getAdyenAmount(cart.ccrz__CurrencyISOCode__c, cart.ccrz__TotalAmount__c);
         paymentRequest.applicationInfo = AdyenUtil.getApplicationInfo();
         paymentRequest.reference = cart.Id;
-        paymentRequest.returnUrl = 'https://b2b-scoping-0920-developer-edition.na139.force.com/services/apexrest/AdyenReturnUrl/*';
+//        paymentRequest.returnUrl = 'https://b2b-scoping-0920-developer-edition.na139.force.com/services/apexrest/AdyenReturnUrl/*';
+        //TODOBAS dynamic get host
+        paymentRequest.returnUrl = 'https://b2b-scoping-0920-dev-ed--c.visualforce.com/apex/AdyenReturn?merchantReference=' + cart.Id;
         paymentRequest.shopperReference = cart.ccrz__Account__c;
         paymentRequest.additionalData = getAdditionalData();
         paymentRequest.channel = 'web';
