--- a/force-app/main/default/classes/AdyenUtil.cls
+++ b/force-app/main/default/classes/AdyenUtil.cls
@@ -13,10 +13,18 @@ public with sharing class AdyenUtil {
         return immediateCapture ? AdyenConstants.IMMEDIATE_CAPTURE : AdyenConstants.MANUAL_CAPTURE;
     }
 
-    public static ccrz__E_Cart__c getCartFromDatabase(String cartId) {
+    public static ccrz__E_Cart__c getCartByEncryptedId(String cartId) {
         String query = 'SELECT ' + Util.allFieldsCommaSeparated(Util.getFieldList('ccrz__E_Cart__c')) + ', Owner.Email FROM ccrz__E_Cart__c WHERE ccrz__EncryptedId__c = :cartId LIMIT 1';
         return (ccrz__E_Cart__c) Database.query(query);
     }
+
+    public static String getCartEncryptedId(String cartId) {
+        String query = 'SELECT ccrz__EncryptedId__c FROM ccrz__E_Cart__c WHERE Id = :cartId LIMIT 1';
+        ccrz__E_Cart__c cart = (ccrz__E_Cart__c) Database.query(query);
+        return (String) cart.ccrz__EncryptedId__c;
+    }
+
+
 
     public static Amount getAdyenAmount(String currencyCode, Decimal amount) {
         Integer multiplier = getMultiplierMinorUnits(currencyCode);
