--- a/force-app/main/default/classes/AdyenService.cls
+++ b/force-app/main/default/classes/AdyenService.cls
@@ -2,30 +2,27 @@
 global with sharing class AdyenService {
     @HttpPost
     global static String adyenPaymentsDetails(){
-        String requestBody = RestContext.request.requestBody.toString();
-        Map<String, Object> requestData = (Map<String, Object>)JSON.deserializeUntyped(requestBody);
+        String stateData = RestContext.request.requestBody.toString();
+        Map<String, Object> requestData = (Map<String, Object>)JSON.deserializeUntyped(stateData);
 
-        //Since cartId will not exist in PaymentsDetailsRequest, it will not be added in request
-//        PaymentsDetailsRequest paymentsDetailsRequest = (PaymentsDetailsRequest) JSON.deserialize(requestBody, PaymentsDetailsRequest.class);
-//        PaymentsResponse paymentsResponse = AdyenPaymentsDetailsRequest.callPaymentsDetails(paymentsDetailsRequest);
-        PaymentsResponse paymentsDetailsResponse = AdyenPaymentsDetailsRequest.adyenPaymentsDetails(requestBody);
+        PaymentsResponse paymentsDetailsResponse = AdyenPaymentsDetails.requestFromStateData(stateData);
         Map<String, Object> paymentResult = AdyenResponseHandler.handleResponse(paymentsDetailsResponse);
 
-        if(!(Boolean)paymentResult.get('isFinal')){
-            return JSON.serialize(paymentResult, true);
-        }
-
+        Boolean orderSuccess = false;
         String cartId = (String)requestData.get('cartId');
-        if(!(paymentsDetailsResponse.merchantReference == cartId)){
-            //TODOBAS restore cart
-            return 'Invalid order';
+
+        if((Boolean)paymentResult.get('isFinal') && paymentsDetailsResponse.merchantReference == cartId){
+            if (String.valueOf(paymentResult.get('resultCode')) == 'AUTHORISED') {
+                //TODOBAS place order success=false
+                Map<String, Object> orderResult = AdyenOrder.placeOrder(paymentResult, cartId);
+                Map<String, String> orderIds = AdyenOrder.validateOrderResult(orderResult);
+                //Return orderId for confirmation page
+                paymentResult.put('orderIdEnc', orderIds.get('orderIdEnc'));
+                orderSuccess = true;
+            }
         }
 
-        if (String.valueOf(paymentResult.get('resultCode')) == 'AUTHORISED') {
-            return AdyenOrder.updateOrderStatus(cartId);
-        }
-
+        paymentResult.put('orderSuccess', orderSuccess);
         return JSON.serialize(paymentResult, true);
-
     }
 }
